<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:stretchColumns="0,1,2,3,4"
    >



    <TableRow android:background="#505050" android:padding="10dp" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:text="@string/zero"
            android:gravity="right"
            android:textSize="28sp"
        />

    </TableRow>
    <TableRow android:padding="5dp" android:id="@+id/tableRow2">
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/ac"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:onClick="clearScreen"
            />
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/sign"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:onClick="getInput"
            android:contentDescription="-"
            />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/per"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:onClick="saveOperation"
            android:contentDescription="%"
            />
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/divide"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="/"
            android:onClick="saveOperation"

            />
    </TableRow>
    <TableRow   android:padding="5dp">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/seven"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="7"
            android:onClick="getInput"

            />
        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/eight"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="8"
            android:onClick="getInput"

            />
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/nine"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="9"
            android:onClick="getInput"
            />
        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/multiply"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="*"
            android:onClick="saveOperation"

            />
    </TableRow>
    <TableRow  android:padding="5dp">
        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/four"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="4"
            android:onClick="getInput"

            />
        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/five"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="5"
            android:onClick="getInput"

            />
        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/six"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="6"
            android:onClick="getInput"
            />
        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/subtract"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="-"
            android:onClick="saveOperation"
            />
    </TableRow>

    <TableRow  android:padding="5dp">
        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/one"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="1"
            android:onClick="getInput"
            />
        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/two"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="2"
            android:onClick="getInput"
            />
        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/three"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="3"
            android:onClick="getInput"
            />
        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/add"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="+"
            android:onClick="saveOperation"

            />
    </TableRow>
    <TableRow android:padding="5dp">
        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/zero"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:layout_span="2"
            android:contentDescription="0"
            android:onClick="getInput"
            />
        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/decimal"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="."
            android:onClick="getInput"
            />
        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/equal"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:contentDescription="="
            android:onClick="calculate"
            />


    </TableRow>



</TableLayout>

